--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "@ionic-native/location-accuracy": "^5.24.0",
     "@ionic-native/native-audio": "^5.24.0",
     "@ionic-native/onesignal": "^5.21.6",
+    "@ionic-native/paypal": "^5.28.0",
     "@ionic-native/printer": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/stripe": "^5.30.0",
     "@ionic/angular": "^5.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angularfire2": "^5.1.2",
-    "chart.js": "^2.9.4",
+    "chart.js": "^2.8.0",
     "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-device": "^2.0.3",
@@ -51,8 +53,9 @@
     "cordova.plugins.diagnostic": "^5.0.2",
     "core-js": "^2.5.4",
     "firebase": "7.14.2",
+    "ionic4-rating": "^1.0.9",
     "moment": "^2.24.0",
-    "ng2-charts": "^2.4.2",
+    "ng2-charts": "^1.6.0",
     "onesignal-cordova-plugin": "^2.10.1",
     "rxjs": "~6.5.1",
     "sweetalert2": "^9.10.12",
@@ -84,25 +87,24 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   },
-  "description": "Mobile application for Restaurant management",
+  "description": "An Ionic project",
   "cordova": {
+    "platforms": [
+      "browser",
+      "android"
+    ],
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
+      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-camera": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova.plugins.diagnostic": {},
       "cordova-plugin-geolocation": {},
       "onesignal-cordova-plugin": {},
-      "cordova-plugin-nativeaudio": {}
-    },
-    "platforms": [
-      "browser",
-      "android"
-    ]
+      "cordova-plugin-camera": {}
+    }
   }
 }
